welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:7: error: type mismatch;
 found   : (Int, Int)
 required: Int
  return (M,pos)} 
         ^